--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0"
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
