--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
+    "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
